# resume_ranker

./: .gitignore  Makefile  README.md  docker-compose.yml  start.bat
.agents/skills/product-manager/: SKILL.md
api/: config.py  database.py  embeddings.py  explain.py  extractor.py  fairness.py  generate_openapi.py  main.py  models.py  normalizer.py  parser.py  pyproject.toml  redactor.py  requirements.txt  schemas.py  search.py
api/data/: esco_skills.csv
api/eval/: qrels.json  resume_ranker_eval.db  run_harness.py  seed_data.py
api/eval/qdrant_storage/: meta.json
api/eval/qdrant_storage/collection/candidates/: storage.sqlite
api/eval/qdrant_storage/collection/jobs/: storage.sqlite
api/tests/: conftest.py  test_health.py  test_milestone_2.py  test_milestone_3.py  test_milestone_4.py  test_pii_redactor.py
docs/: ARCHITECTURE_REVIEW.md  MATCHING_ARCHITECTURE_PROPOSAL.md
docs/specs/resume-ranker/: README.md
docs/specs/resume-ranker/milestone-1-infra-pii/: 1.1-setup-monorepo.md  1.2-pii-redactor.md
docs/specs/resume-ranker/milestone-2-parser-esco/: 2.1-pdf-parser-llm.md  2.2-skill-normalizer-esco.md
docs/specs/resume-ranker/milestone-3-embeddings-busca/: 3.1-embedding-provider-qdrant.md  3.2-hybrid-search-reranker.md
docs/specs/resume-ranker/milestone-4-fairness-evaluation/: 4.1-explainability-bias-audit.md  4.2-evaluation-harness-seed.md
docs/specs/resume-ranker/milestone-5-frontend/: 5.1-frontend-nextjs.md
web/: package-lock.json
web/src/app/: globals.css  page.tsx
web/src/types/: api.ts
