[tool.poetry]
name = "resume-ranker-api"
version = "0.1.0"
description = "Resume Ranker API - Backend Service"
authors = ["Antigravity"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
qdrant-client = "^1.3.0"
presidio-analyzer = "^2.2.0"
presidio-anonymizer = "^2.2.0"
spacy = "^3.5.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
pymupdf = "^1.22.0"
rapidfuzz = "^3.0.0"
sentence-transformers = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
